--- a/index.html
+++ b/index.html
@@ -14,7 +14,30 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-				
+				# ENSE 374 Group Project
+## Team Riker
+
+### Description
+Group Project done by University of Regina's Software Engineering Students for ENSE 374: Software Engineering Management class in the FALL 2021 semester. This project was assigned by Dr. Tim Maciag and is being completed under his supervision.
+
+### Group Members
+Team consists of Software Engineering Students from the University of Regina
+1. Archisha Bhattacharya
+2. Bulbul Arora
+3. Yixu Zhou
+
+### Content
+This repository consists of the project files relating to Team Riker's Group Project.
+
+- [Vlogs](https://www.youtube.com/playlist?list=PL8BedSY240vubMrNiGZVit0FEH2b96TPz)
+
+**Project Prerequisites and Planning**
+- [Documentation](https://github.com/archishab/Team-Riker/tree/main/Project%20Prerequisites%20and%20Planning/Documentation)
+
+**Project Design Architecture**
+- [Prototypes](https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/Prototypes)
+- [UML DIagrams](https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/UML%20Diagrams)
+- [MVC Diagram](https://github.com/archishab/Team-Riker/blob/main/Project%20Design%20Architecture/MVC%20Architecture%20Diagram.pdf)
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
