--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-				# ENSE 374 Group Project
+				<p># ENSE 374 Group Project</p>
 ## Team Riker
 
 ### Description
