--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-		<p># ENSE 374 Group Project</p>
+		<p>ENSE 374 Group Project</p>
 		<br>
-## Team Riker
-
-### Description
-Group Project done by University of Regina's Software Engineering Students for ENSE 374: Software Engineering Management class in the FALL 2021 semester. This project was assigned by Dr. Tim Maciag and is being completed under his supervision.
-
-### Group Members
+		<p>Team Riker</p>
+		<br>
+                <p>Description</p>
+<p>Group Project done by University of Regina's Software Engineering Students for ENSE 374: Software Engineering Management class in the FALL 2021 semester. This project was assigned by Dr. Tim Maciag and is being completed under his supervision.</p>
+<br>
+<p>Group Members</p>
 Team consists of Software Engineering Students from the University of Regina
 1. Archisha Bhattacharya
 2. Bulbul Arora
