--- a/index.html
+++ b/index.html
@@ -22,23 +22,32 @@
 <p>Group Project done by University of Regina's Software Engineering Students for ENSE 374: Software Engineering Management class in the FALL 2021 semester. This project was assigned by Dr. Tim Maciag and is being completed under his supervision.</p>
 <br>
 <p>Group Members</p>
-Team consists of Software Engineering Students from the University of Regina
-1. Archisha Bhattacharya
-2. Bulbul Arora
-3. Yixu Zhou
-
-### Content
-This repository consists of the project files relating to Team Riker's Group Project.
-
-- [Vlogs](https://www.youtube.com/playlist?list=PL8BedSY240vubMrNiGZVit0FEH2b96TPz)
-
-**Project Prerequisites and Planning**
-- [Documentation](https://github.com/archishab/Team-Riker/tree/main/Project%20Prerequisites%20and%20Planning/Documentation)
-
-**Project Design Architecture**
-- [Prototypes](https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/Prototypes)
-- [UML DIagrams](https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/UML%20Diagrams)
-- [MVC Diagram](https://github.com/archishab/Team-Riker/blob/main/Project%20Design%20Architecture/MVC%20Architecture%20Diagram.pdf)
+<br>
+<p>Team consists of Software Engineering Students from the University of Regina</p>
+<br>
+<p>1. Archisha Bhattacharya</p>
+<br>
+<p>2. Bulbul Arora</p>
+<br>
+<p>3. Yixu Zhou</p>
+<br>
+<p>Content</p>
+<br>
+<p>This repository consists of the project files relating to Team Riker's Group Project.</p>
+<br>
+<p>[Vlogs]<a>(https://www.youtube.com/playlist?list=PL8BedSY240vubMrNiGZVit0FEH2b96TPz)</a></p>
+<br>
+<p>Project Prerequisites and Planning</p>
+<br>
+<p>[Documentation]<a>(https://github.com/archishab/Team-Riker/tree/main/Project%20Prerequisites%20and%20Planning/Documentation)</a></p>
+<br>
+<p>Project Design Architecture</p>
+<br>
+<p>[Prototypes]<a>(https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/Prototypes)</a></p>
+<br>
+<p>[UML DIagrams]<a>(https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/UML%20Diagrams)</a></p>
+<br>
+<p>[MVC Diagram]<a>(https://github.com/archishab/Team-Riker/blob/main/Project%20Design%20Architecture/MVC%20Architecture%20Diagram.pdf)</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
