--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 <br>
 <p>This repository consists of the project files relating to Team Riker's Group Project.</p>
 <br>
-<p>[Vlogs]<a>(https://www.youtube.com/playlist?list=PL8BedSY240vubMrNiGZVit0FEH2b96TPz)</a></p>
+<p>[Vlogs]<a>https://www.youtube.com/playlist?list=PL8BedSY240vubMrNiGZVit0FEH2b96TPz</a></p>
 <br>
 <p>Project Prerequisites and Planning</p>
 <br>
-<p>[Documentation]<a>(https://github.com/archishab/Team-Riker/tree/main/Project%20Prerequisites%20and%20Planning/Documentation)</a></p>
+<p>[Documentation]<a>https://github.com/archishab/Team-Riker/tree/main/Project%20Prerequisites%20and%20Planning/Documentation</a></p>
 <br>
 <p>Project Design Architecture</p>
 <br>
-<p>[Prototypes]<a>(https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/Prototypes)</a></p>
+<p>[Prototypes]<a>https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/Prototypes</a></p>
 <br>
-<p>[UML DIagrams]<a>(https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/UML%20Diagrams)</a></p>
+<p>[UML DIagrams]<a>https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/UML%20Diagrams</a></p>
 <br>
-<p>[MVC Diagram]<a>(https://github.com/archishab/Team-Riker/blob/main/Project%20Design%20Architecture/MVC%20Architecture%20Diagram.pdf)</a></p>
+<p>[MVC Diagram]<a>https://github.com/archishab/Team-Riker/blob/main/Project%20Design%20Architecture/MVC%20Architecture%20Diagram.pdf</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
