--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <br>
 <p>[Prototypes]<a href="https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/Prototypes">https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/Prototypes</a></p>
 <br>
-<p>[UML DIagrams]<a href="https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/UML%20Diagrams"https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/UML%20Diagrams</a></p>
+<p>[UML DIagrams]<a href="https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/UML%20Diagrams">https://github.com/archishab/Team-Riker/tree/main/Project%20Design%20Architecture/UML%20Diagrams</a></p>
 <br>
 <p>[MVC Diagram]<a href="https://github.com/archishab/Team-Riker/blob/main/Project%20Design%20Architecture/MVC%20Architecture%20Diagram.pdf">https://github.com/archishab/Team-Riker/blob/main/Project%20Design%20Architecture/MVC%20Architecture%20Diagram.pdf</a></p>
     		</div><!-- /.blurb -->
